# PetrBeranek.github.io

./: index.html
Portfolio_web/About_myself/: Me.html  default.css
Portfolio_web/Games/The_Clockwork/: README_The_Clockwork.html
Portfolio_web/Games/The_Clockwork/manual/: UserManual_The_Clockwork.html
Portfolio_web/Graphics/: art.html  default.css
Portfolio_web/Graphics/2D/: README_2D.html
Portfolio_web/Graphics/3D Models/Arien/: README_Arien.html
Portfolio_web/Graphics/3D Models/Beetle/: README_Beetle.html
Portfolio_web/Graphics/3D Models/Clockwork_Puppet/: README_ClockworkPuppet.html
Portfolio_web/Graphics/3D Models/CloudFactory/: README_CloudFactory.html
Portfolio_web/Graphics/3D Models/Giraffcentrism/: README_GiraffeCentrism.html
Portfolio_web/Graphics/3D Models/Grim/: README_Grim.html
Portfolio_web/Graphics/3D Models/Mask/: README_Mask.html
Portfolio_web/Graphics/3D Models/Robots/: README_Robots.html
Portfolio_web/Graphics/3D Models/Sheepicore/: README_Sheepicore.html
Portfolio_web/Graphics/3D Models/The_Clockwork_CDCover/: README_CDCover.html  default.css
Portfolio_web/Graphics/3D Models/Watch/: README_Watch.html
Portfolio_web/Programming/: programming.html
Portfolio_web/Programming/Bachelor_thesis/: README_Bachelor_thesis.html  list_of_modified_filed.txt  test data.txt
Portfolio_web/Programming/Cloud_Factory/: README_CloudFactory.html
Portfolio_web/Programming/Cloud_Factory/CloudFactory/pgr_framework/2012/pgr-framework/src/AntTweakBar/: CMakeLists.txt
Portfolio_web/Programming/Ray_Tracer/: README_RayTracer.html
(+302 files in other folders)
